k8s/dev/simple-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-api-deploy
  namespace: api
  labels:
    app: simple-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-api
  template:
    metadata:
      labels:
        app: simple-api
    spec:
      containers:
      - name: simple-api
        image: oscka/simple-api  # on server
        # image: simple-api
        ports: 
        - name: http
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: simple-api-service
  namespace: api
spec:
  type: NodePort
  selector:
    app: simple-api
  ports:
    - port: 80
      targetPort: 80
